WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309123
[hanging-punctuation] U+0027 and U+0022 should work as hangable quotes
https://bugs.webkit.org/show_bug.cgi?id=309123
Summary
[hanging-punctuation] U+0027 and U+0022 should work as hangable quotes
Tim Nguyen (:ntim)
Reported
2026-03-03 16:33:17 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-03 16:34:08 PST
<
rdar://problem/171672576
>
Tim Nguyen (:ntim)
Comment 2
2026-03-03 17:01:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59849
Tim Nguyen (:ntim)
Comment 3
2026-03-03 18:04:27 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/58239
EWS
Comment 4
2026-03-03 18:19:35 PST
Committed
308597@main
(8b655c16c210): <
https://commits.webkit.org/308597@main
> Reviewed commits have been landed. Closing PR #59849 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug