Cherry-pick 8b655c16c210. rdar://172668971

[hanging-punctuation] U+0027 and U+0022 should work as hangable quotes
    https://bugs.webkit.org/show_bug.cgi?id=309123
    rdar://171672576

    Reviewed by Alan Baradlay.

    These ASCII quotes are explicitly listed as exceptions for first/last quotes: https://drafts.csswg.org/css-text/#hanging-punctuation-property

    Tests: imported/w3c/web-platform-tests/css/css-text/hanging-punctuation/hanging-punctuation-first-ascii-quote.html
           imported/w3c/web-platform-tests/css/css-text/hanging-punctuation/hanging-punctuation-last-ascii-quote.html

    * LayoutTests/imported/w3c/web-platform-tests/css/css-text/hanging-punctuation/hanging-punctuation-first-ascii-quote-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-text/hanging-punctuation/hanging-punctuation-first-ascii-quote.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-text/hanging-punctuation/hanging-punctuation-last-ascii-quote-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-text/hanging-punctuation/hanging-punctuation-last-ascii-quote.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-text/hanging-punctuation/reference/hanging-punctuation-first-ascii-quote-ref.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-text/hanging-punctuation/reference/hanging-punctuation-last-ascii-quote-ref.html: Added.
    * Source/WTF/wtf/unicode/CharacterNames.h:
    * Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp:
    (WebCore::Layout::isASCIIHangableQuote):
    (WebCore::Layout::isHangableOpenPunctuation):
    (WebCore::Layout::isHangableClosePunctuation):
    (WebCore::Layout::TextUtil::hasHangablePunctuationStart):
    (WebCore::Layout::TextUtil::hasHangablePunctuationEnd):

    Canonical link: https://commits.webkit.org/308597@main

Identifier: 305413.489@safari-7624-branch